--- a/fr/index.html
+++ b/fr/index.html
@@ -40,15 +40,19 @@
                 <div class='flex items-center gap-14'>
 
                     <nav class='flex items-center text-xs uppercase font-bold gap-14'>
-                        <a href=''>Services</a>
-                        <a href=''>People</a>
-                        <a href=''>Careers</a>
-                        <a href=''>Firm</a>
+                        <a class='pt-2 pb-1 border-b-2 border-transparent hover:text-orange-500' href=''>Services</a>
+                        <a class='pt-2 pb-1 border-b-2 border-transparent hover:text-orange-500' href=''>People</a>
+                        <a class='pt-2 pb-1 border-b-2 border-transparent hover:text-orange-500' href=''>Careers</a>
+                        <a class='pt-2 pb-1 border-b-2 border-orange-500 hover:text-orange-500' href=''>Firm</a>
                     </nav>
 
                     <div class='flex items-center gap-5'>
-                        <a href=''>S</a>
-                        <a href=''>E</a>
+                        <a class='flex items-center justify-center rounded-full bg-blue-500 border-blue-500 hover:bg-orange-500 hover:border-orange-500 p-4' href=''>
+                            <img class='block w-5 h-5' src='./assets/img/icons/magnifying-glass.svg'>
+                        </a>
+                        <a class='flex items-center justify-center rounded-full border border-gray-300 bg-white-500 hover:bg-orange-500 hover: hover:border-orange-500 p-4' href=''>
+                            <img class='block w-5 h-5' src='./assets/img/icons/eye.svg'>
+                        </a>
                     </div>
 
                 </div>
@@ -57,7 +61,7 @@
 
         </header>
 
-        <main>
+        <main class=''>
             <div class='px-5 py-14 bg-sky-600 text-white'>
                 <div class='mx-auto max-w-7xl space-y-1'>
                     <div>Firm</div>
@@ -66,10 +70,34 @@
             </div>
         </main>
 
-        <footer class='px-5 py-5 text-gray-400 font-light'>
-            <div class='mx-auto max-w-7xl'>
-                &copy; 2024 All content of this web site is the property and copyright of Law Firm LLP and may not be reproduced in any format without prior express permission. Contact marketing@lawfirm.com for more information or to seek permission to reproduce content.
-Attorney Advertising. Website by Great Fakes
+        <footer class='px-5 '>
+            <div class='py-20 mx-auto max-w-7xl flex items-center justify-between'>
+                
+                <nav class='uppercase text-xs flex gap-8 font-bold'>
+                    <a class='hover:text-orange-500' href=''>Subscribe</a>
+                    <a class='hover:text-orange-500' href=''>Contact Us</a>
+                    <a class='hover:text-orange-500' href=''>Terms of Use</a>
+                    <a class='hover:text-orange-500' href=''>Privacy Notice</a>
+                    <a class='hover:text-orange-500' href=''>Accessibility</a>
+                    <a class='hover:text-orange-500' href=''>Transparency in Coverage</a>
+                    <a class='hover:text-orange-500' href=''>Payment Portal</a>
+                    <a class='hover:text-orange-500' href=''>Cookie Preferences</a>
+                </nav>
+
+                <div class='flex items-center gap-3'>
+                    <a class='rounded-full bg-gray-400 hover:bg-orange-500 p-2' href=''><img class='block w-5 h-5' src='./assets/img/icons/twitter.svg'></a>
+                    <a class='rounded-full bg-gray-400 hover:bg-orange-500 p-2' href=''><img class='block w-5 h-5' src='./assets/img/icons/linkedin.svg'></a>
+                    <a class='rounded-full bg-gray-400 hover:bg-orange-500 p-2' href=''><img class='block w-5 h-5' src='./assets/img/icons/facebook.svg'></a>
+                    <a class='rounded-full bg-gray-400 hover:bg-orange-500 p-2' href=''><img class='block w-5 h-5' src='./assets/img/icons/instagram.svg'></a>                    
+                </div>
+
+
+            </div>
+            <div class='py-20 mx-auto max-w-7xl border-t border-gray-400 text-gray-400 font-light text-sm'>
+                    <div class='max-w-4xl'>
+                        <p>&copy; 2024 All content of this web site is the property and copyright of Law Firm LLP and may not be reproduced in any format without prior express permission. Contact marketing@lawfirm.com for more information or to seek permission to reproduce content.</p>
+                        <div>Attorney Advertising. Website by Great Fakes</div>
+                    </div>
             </div>
         </footer>
 
