--- a/fr/index.html
+++ b/fr/index.html
@@ -82,15 +82,21 @@
             </div>
 
             <div class='px-5'>
-                <div class='mx-auto max-w-7xl py-8 border-b border-gray-300'>
+                <div class='mx-auto max-w-7xl py-8'>
                     <img class='block w-8 h-8' src='./assets/img/icons/arrow-left-long.svg'>
                 </div>
             </div>
 
             
             <div class='px-5'>
-                <div class='mx-auto max-w-7xl'>
-                    <div data-lxb_togo_blog="https://www.99parkrow.com/" data-lxb_togo_base="https://lxb-togo-demo.pages.dev/fr" data-lxb_togo_element="content" ></div>
+                <div class='mx-auto max-w-7xl flex justify-between gap-x-10'>
+
+                    <div class='w-8/12 border-t border-gray-300' data-lxb_togo_blog="https://www.99parkrow.com/" data-lxb_togo_base="https://lxb-togo-demo.pages.dev/fr" data-lxb_togo_element="content" ></div>
+
+                    <div class='w-3/12'>
+                        blog meta
+                    </div>
+
                 </div>
             </div>    
 
