--- a/fr/subscribe.html
+++ b/fr/subscribe.html
@@ -71,8 +71,8 @@
                 <div class='mx-auto max-w-7xl flex items-center justify-between'>
 
                     <div class='space-y-1'>
-                        <div>Firm</div>
-                        <h1 class='font-bold text-5xl'>Publications</h1>
+                        <div>Publications</div>
+                        <h1 class='font-bold text-5xl'>Subscribe</h1>
                     </div>
 
                     <div class='' data-lxb_togo_style="naked" data-lxb_togo_blog="https://www.99parkrow.com/" data-lxb_togo_base="https://lxb-togo-demo.pages.dev/fr" data-lxb_togo_element="nav" ></div>
@@ -91,7 +91,7 @@
             <div class='px-5'>
                 <div class='mx-auto max-w-7xl flex justify-between'>
 
-                    <div class='w-8/12 border-t border-gray-300' data-lxb_togo_blog="https://www.99parkrow.com/" data-lxb_togo_base="https://lxb-togo-demo.pages.dev/fr" data-lxb_togo_element="content" ></div>
+                    <div class='w-8/12 border-t border-gray-300' data-lxb_togo_blog="https://www.99parkrow.com/" data-lxb_togo_base="https://lxb-togo-demo.pages.dev/fr" ata-lxb_togo_start="p=subscribe" data-lxb_togo_element="content" ></div>
 
                     <div class='w-4/12 space-y-16 pl-32'>
                         
