--- a/fr/subscribe.html
+++ b/fr/subscribe.html
@@ -123,7 +123,7 @@
                             <p>Get timely information related to your business and legal needs delivered to your inbox.</p>
 
                             <div class='flex justify-end w-full'>
-                                <a href='/subscribe'>
+                                <a href='https://lxb-togo-demo.pages.dev/fr/subscribe'>
                                     <img class='block w-8 h-8' src='./assets/img/icons/arrow-right-long.svg'>
                                 </a>
                             </div>
