--- a/fr/index.html
+++ b/fr/index.html
@@ -83,7 +83,9 @@
 
             <div class='px-5'>
                 <div class='mx-auto max-w-7xl py-8'>
-                    <img class='block w-8 h-8' src='./assets/img/icons/arrow-left-long.svg'>
+                    <a href='./index.html'>
+                        <img class='block w-8 h-8' src='./assets/img/icons/arrow-left-long.svg'>
+                    </a>
                 </div>
             </div>
 
@@ -123,7 +125,7 @@
                             <p>Get timely information related to your business and legal needs delivered to your inbox.</p>
 
                             <div class='flex justify-end w-full'>
-                                <a href='https://lxb-togo-demo.pages.dev/fr/subscribe'>
+                                <a href='./subscribe.html'>
                                     <img class='block w-8 h-8' src='./assets/img/icons/arrow-right-long.svg'>
                                 </a>
                             </div>
