--- a/fr/subscribe.html
+++ b/fr/subscribe.html
@@ -83,7 +83,9 @@
 
             <div class='px-5'>
                 <div class='mx-auto max-w-7xl py-8'>
-                    <img class='block w-8 h-8' src='./assets/img/icons/arrow-left-long.svg'>
+                    <a href='./index.html'>
+                        <img class='block w-8 h-8' src='./assets/img/icons/arrow-left-long.svg'>
+                    </a>
                 </div>
             </div>
 
