--- a/fr/subscribe.html
+++ b/fr/subscribe.html
@@ -75,7 +75,7 @@
                         <h1 class='font-bold text-5xl'>Subscribe</h1>
                     </div>
 
-                    <div class='' data-lxb_togo_style="naked" data-lxb_togo_blog="https://www.99parkrow.com/" data-lxb_togo_base="https://lxb-togo-demo.pages.dev/fr" data-lxb_togo_element="nav" ></div>
+                    <div class='' data-lxb_togo_style="naked" data-lxb_togo_blog="https://www.99parkrow.com/" data-lxb_togo_base="https://lxb-togo-demo.pages.dev/fr" data-lxb_togo_element="nav" data-lxb_togo_hijack="0" ></div>
 
                 </div>
 
