--- a/fr/article.html
+++ b/fr/article.html
@@ -93,7 +93,7 @@
             <div class='px-5'>
                 <div class='mx-auto max-w-7xl flex justify-between'>
 
-                    <div class='w-8/12 border-t border-gray-300' data-lxb_togo_blog="https://www.99parkrow.com/" data-lxb_togo_base="https://lxb-togo-demo.pages.dev/fr" data-lxb_togo_element="content" ></div>
+                    <div class='w-8/12 border-t border-gray-300' data-lxb_togo_blog="https://www.99parkrow.com/" data-lxb_togo_base="https://lxb-togo-demo.pages.dev/fr" data-lxb_togo_element="content" data-lxb_togo_single_base="https://lxb-togo-demo.pages.dev/fr/article"></div>
 
                     <div class='w-4/12 space-y-16 pl-32'>
                         
