--- a/fr/article.html
+++ b/fr/article.html
@@ -91,41 +91,9 @@
 
             
             <div class='px-5'>
-                <div class='mx-auto max-w-7xl flex justify-between'>
+                <div class='mx-auto max-w-7xl'>
 
-                    <div class='w-8/12 border-t border-gray-300' data-lxb_togo_blog="https://www.99parkrow.com/" data-lxb_togo_base="https://lxb-togo-demo.pages.dev/fr" data-lxb_togo_element="content" data-lxb_togo_single_base="https://lxb-togo-demo.pages.dev/fr/article"></div>
-
-                    <div class='w-4/12 space-y-16 pl-32'>
-                        
-                        <div class='space-y-4 pb-16 border-b border-gray-300'>
-
-                            <h3 class='font-bold uppercase leading-tight tracking-lg'>
-                                <div class='mb-1'>Hello, this is the single post template</div>
-                                <div class='h-[2.5px] w-[45px] bg-orange-500'></div>
-                            </h3>
-
-                        </div>
-
-                        <div class='space-y-4 pb-16 border-b border-gray-300'>
-
-                            <h3 class='font-bold uppercase leading-tight tracking-lg'>
-                                <div class='mb-1'>Subscribe</div>
-                                <div class='h-[2.5px] w-[45px] bg-orange-500'></div>
-                            </h3>
-
-                            <img class='block' loading='lazy' height='159' width='280' src='./assets/img/subscribe.webp'>
-
-                            <p>Get timely information related to your business and legal needs delivered to your inbox.</p>
-
-                            <div class='flex justify-end w-full'>
-                                <a href='./subscribe.html'>
-                                    <img class='block w-8 h-8' src='./assets/img/icons/arrow-right-long.svg'>
-                                </a>
-                            </div>
-
-                        </div>                        
-
-                    </div>
+                    <div class='' data-lxb_togo_blog="https://www.99parkrow.com/" data-lxb_togo_base="https://lxb-togo-demo.pages.dev/fr" data-lxb_togo_element="content" data-lxb_togo_single_base="https://lxb-togo-demo.pages.dev/fr/article"></div>
 
                 </div>
             </div>    
