--- a/bootstrap/blog.html
+++ b/bootstrap/blog.html
@@ -96,7 +96,7 @@
                                         <a class="page-scroll" href="#team">Team</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="./bootstrap/blog">Blog</a>
+                                        <a class="page-scroll" href="./blog">Blog</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#contact">Contact</a>
