--- a/fr/subscribe.html
+++ b/fr/subscribe.html
@@ -15,7 +15,7 @@
         
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet"> 
 
     <style>
         body { font-family: "Roboto", 'sans-serif'; }
@@ -93,9 +93,9 @@
             <div class='px-5'>
                 <div class='mx-auto max-w-7xl flex justify-between'>
 
-                    <div class='w-8/12 border-t border-gray-300' data-lxb_togo_blog="https://www.99parkrow.com/" data-lxb_togo_base="https://lxb-togo-demo.pages.dev/fr" data-lxb_togo_start="p=subscribe" data-lxb_togo_element="content" data-lxb_togo_single_base="https://lxb-togo-demo.pages.dev/fr/article"></div>
+                    <div class='w-9/12 border-t border-gray-300' data-lxb_togo_blog="https://www.99parkrow.com/" data-lxb_togo_base="https://lxb-togo-demo.pages.dev/fr" data-lxb_togo_start="p=subscribe" data-lxb_togo_element="content" data-lxb_togo_single_base="https://lxb-togo-demo.pages.dev/fr/article"></div>
 
-                    <div class='w-4/12 space-y-16 pl-32'>
+                    <div class='w-3/12 space-y-16 pl-24'>
                         
                         <div class='space-y-4 pb-16 border-b border-gray-300'>
 
