--- a/fr/claire.html
+++ b/fr/claire.html
@@ -75,10 +75,18 @@
                     <div class='py-16'>
                         <h1 class='text-[60px] leading-[66px] font-[700]'>Claire Nelson</h1>
                         <div>Partner</div>
-                        <div><a href='#'>email@email.com<a></div>
+                        <div class='mb-6'><a href='#'>email@email.com</a></div>
                         <div class='flex'>
-                            <div>office</div>
-                            <div>office</div>
+                            <div class='pr-8 border-r border-sky-500'>
+                                <div class='font-bold'>Boston, MA</div>
+                                <div>Tel: 123.456.7890</div>
+                                <div>Fax: 098.765.4321</div>
+                            </div>
+                            <div class='pl-8'>
+                                <div class='font-bold'>New York, NY</div>
+                                <div>Tel: 123.456.7890</div>
+                                <div>Fax: 098.765.4321</div>
+                            </div>
                         </div>
                     </div>
 
@@ -90,8 +98,19 @@
                 <div class='mx-auto max-w-7xl flex justify-between'>
                     
                     <div class='w-3/12 space-y-16 pr-24'>
-                        
-                        <div class='' data-lxb_togo_style="naked" data-lxb_togo_blog="https://www.99parkrow.com/" data-lxb_togo_base="https://lxb-togo-demo.pages.dev/fr" data-lxb_togo_element="nav" ></div>                      
+
+                        <nav class='font-bold' >
+
+                            <div class='border-t border-gray-300 border-b' ><a class='px-6 py-3 block border-l-4 border-transparent ' href='#'>Biography</a></div>
+
+                            <div class='border-b border-gray-300' ><a class='px-6 py-3 block text-orange-500 border-l-4 border-orange-500' href='#'>Publications</a></div>
+
+                            <div class='border-b border-gray-300' ><a class='px-6 py-3 block border-l-4 border-transparent ' href='#'>Events</a></div>
+
+                            <div class='border-b border-gray-300' ><a class='px-6 py-3 block border-l-4 border-transparent ' href='#'>News</a></div>
+
+                        </nav>
+
 
                     </div>
 
