--- a/fr/technology.html
+++ b/fr/technology.html
@@ -71,7 +71,7 @@
                 <div class='mx-auto max-w-7xl flex items-center justify-start gap-24'>
 
                     <div class='py-16'>
-                        <h1 class='mb-1 text-[60px] leading-[66px] font-[700]'>Lou Updates</h1>
+                        <h1 class='mb-1 text-[60px] leading-[66px] font-[700]'>Technology</h1>
                     </div>
 
                 </div>
@@ -105,7 +105,7 @@
 
                     </div>
 
-                    <div class='w-9/12' data-lxb_togo_blog="https://www.99parkrow.com/" data-lxb_togo_base="https://lxb-togo-demo.pages.dev/fr" data-lxb_togo_element="content" data-lxb_togo_start="category=lou-updates" data-lxb_togo_single_base="https://lxb-togo-demo.pages.dev/fr/article"></div>
+                    <div class='w-9/12' data-lxb_togo_blog="https://www.99parkrow.com/" data-lxb_togo_base="https://lxb-togo-demo.pages.dev/fr" data-lxb_togo_element="content" data-lxb_togo_start="category=technology" data-lxb_togo_single_base="https://lxb-togo-demo.pages.dev/fr/article"></div>
 
 
                 </div>
