--- a/fr/claire.html
+++ b/fr/claire.html
@@ -121,8 +121,13 @@
 
                     </div>
 
-                    <div class='w-9/12' data-lxb_togo_blog="https://www.99parkrow.com/" data-lxb_togo_base="https://lxb-togo-demo.pages.dev/fr" data-lxb_togo_element="content" data-lxb_togo_start="author=clairenelson" data-lxb_togo_single_base="https://lxb-togo-demo.pages.dev/fr/article"></div>
+                    <div class='w-9/12'>
+                        
+                        <h3 class='font-bold text-3xl mb-10 pb-8 border-b border-gray-300'>Publications</h3>
 
+
+                        <div data-lxb_togo_blog="https://www.99parkrow.com/" data-lxb_togo_base="https://lxb-togo-demo.pages.dev/fr" data-lxb_togo_element="content" data-lxb_togo_start="author=clairenelson" data-lxb_togo_single_base="https://lxb-togo-demo.pages.dev/fr/article"></div>
+                    </div>
 
                 </div>
             </div>    
