--- a/fr/technology.html
+++ b/fr/technology.html
@@ -51,7 +51,7 @@
                     </nav>
 
                     <div class='flex items-center gap-5'>
-                        <a class='flex items-center justify-center rounded-full bg-blue-500 border-blue-500 hover:bg-orange-500 hover:border-orange-500 p-4' href='/?s='>
+                        <a class='flex items-center justify-center rounded-full bg-blue-500 border-blue-500 hover:bg-orange-500 hover:border-orange-500 p-4' href='/fr/?s='>
                             <img class='block w-5 h-5' src='./assets/img/icons/magnifying-glass.svg'>
                         </a>
                         <a class='flex items-center justify-center rounded-full border border-gray-300 bg-white-500 hover:bg-orange-500 hover: hover:border-orange-500 p-4' href=''>
