--- a/fr/article.html
+++ b/fr/article.html
@@ -51,7 +51,7 @@
                     </nav>
 
                     <div class='flex items-center gap-5'>
-                        <a class='flex items-center justify-center rounded-full bg-blue-500 border-blue-500 hover:bg-orange-500 hover:border-orange-500 p-4' href='/fr/?s='>
+                        <a class='flex items-center justify-center rounded-full bg-blue-500 border-blue-500 hover:bg-orange-500 hover:border-orange-500 p-4' data-lxb_togo_element='link' data-lxb_togo_href='search' data-lxb_togo_base="https://lxb-togo-demo.pages.dev/fr" data-lxb_togo_href='search' data-lxb_togo_blog='https://www.99parkrow.com/' href='#'>
                             <img class='block w-5 h-5' src='./assets/img/icons/magnifying-glass.svg'>
                         </a>
                         <a class='flex items-center justify-center rounded-full border border-gray-300 bg-white-500 hover:bg-orange-500 hover: hover:border-orange-500 p-4' href=''>
